<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Barrel Race</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="startLabel">Start</string>
    <string name="highScores">High Score</string>
    <string name="zero">00:00:00</string>
    <string name="horseColorLabel">Horse Color :</string>
    <string name="courtBackgroundLabel">Court Background :</string>
    <string name="barrelColorLabel">Barrel Color :</string>
    <string name="difficultyLabel">Difficulty Level :</string>
    <string name ="promptText">Please enter your name: </string>

    <string-array name="barrel_color_array">
        <item>Red</item>
        <item>Blue</item>
        <item>Black</item>
    </string-array>
    <string-array name="bg_color_array">
        <item>white</item>
        <item>light gray</item>
    </string-array>
    <string-array name="difficuty_array">
        <item>Easy</item>
        <item>Normal</item>
        <item>Hard</item>
        <item>Crazy</item>
    </string-array>

    <string name = "help">Help</string>
    <string name="replay">REPLAY</string>
    <string name="Home">HOME</string>
    <string name="Result">RESULT</string>
    <string name="highScoreFinalAct">HIGHSCORE :</string>
    <string name="yourScoreText">YOUR SCORE :</string>
    
    <string name="title_activity_high_score_list_view">HighScoreListViewActivity</string>
    <string name="title_activity_high_score">HighScoreActivity</string>
    <string name="title_activity_help">HelpActivity</string>
   
    
    <string name="helpText">        
        The game starts when we click the flag icon and the ball starts to move out. There are
		three barrels placed in a clover pattern. You must maneuver the ball across the barrels 
		and finish the game. 
		
		Touching any of the barrels will make you lose the game and you must start over. 
		Hitting the fences around the course will add 5 seconds to your current time, but you 
		get to continue the race. The time is shown as minutes, seconds, and hundredths.
		The timer starts when the game begins and ends when you have crossed all the barrels.
		Your objective is to get the fastest time without knocking over any of the barrels.
		HAVE FUN PLAYING THE GAME!
	</string>

</resources>