<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SettingsActivity" >

    <TextView
        android:id="@+id/txtViewCourtBackgroundLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/courtBackgroundLabel"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinnerbg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtViewHorseColorLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/horseColorLabel"
        android:textSize="20sp" 
        android:layout_marginTop="10dp"/>

    <Spinner
        android:id="@+id/spinnerhorse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtViewBarrelColorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/barrelColorLabel"
        android:textSize="20sp"
        android:layout_marginTop="10dp" />

    <Spinner
        android:id="@+id/spinnerbarrel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp" />
    
     <TextView
        android:id="@+id/txtViewDifficultyLevelLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/difficultyLabel"
        android:textSize="20sp"
        android:layout_marginTop="10dp" />

    <Spinner
        android:id="@+id/spinnerDifficulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="20sp" />

</LinearLayout>